--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -247,3 +247,5 @@ line-height: 30px;
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
 body{margin-top:20px;}
 .fa-fw {width: 2em;}
+
+/*login*/
