--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,16 +4,18 @@
                         <h1>Bienvenue sur Woolly</h1>
                         <p>Billetterie des associations de l'UTC.</p>
                       </div>    
+                    
+                      
                    <!--<div  ng-controller="MyController">       !-->     
                     <div class="col-md-6 col-sm-6 col-xs-6" ng-repeat="sale in next_sales" ng-cloak>                       
                         <div class="panel panel-primary text-center no-boder bg-color-woolly">
-                            <div class="panel-body">
+                           <div class="panel-body">
                                 <i class="fa fa-check-square  fa-5x"></i>
                                 <h1>{{sale.attributes.name}}</h1>
                                 <hr>
                                  <p>{{sale.attributes.description}}</p>
                                 <p>Organisé par : <b>{{sale.attributes.association}}</b></p>
-                                <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy'}}</p>
+                                <p>Début des ventes le : {{sale.attributes.begin_date | date: 'dd - MM - yyyy HH:mm:ss'}}</p>
                                 <!--{{sale.relationships.items.links.related}}!-->
                                     <div  ng-show="sale.__showMore" ng-repeat="item in sale.__items"  style="text-align:left;" ><hr>
                                         <h3><span ng-bind="item.id"></span> :   </h3> 
@@ -47,11 +49,11 @@
                             <h4 class="modal-title">Finalisation de votre achat</h4>
                           </div>
                           <div class="modal-body">
-                            <p>Vous souhaitez acheter <b ng-bind="nbPlace">0</b> place pour <b ng-bind="nameEvent"></b><br>Veuillez choisir votre moyen de paiement : </p>
+                            <p>Vous souhaitez acheter <b ng-bind="nbPlace">0</b> place(s).<br>Veuillez choisir votre moyen de paiement : </p>
                           </div>
                           <div class="modal-footer" style="text-align: center;">
                             <!--<button type="button" class="btn btn-success" ng-href="https://payutc.nemopay.net" >PayUTC</button>!-->
-                            <a type="button" class="btn btn-success" ng-click="createTransaction(sale)">PayUTC</a>
+                            <a type="button" class="btn btn-success" ng-click="createTransaction(nbPlace)">PayUTC</a>
                             
                             <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                           </div>
