--- a/app/views/mon_compte.html
+++ b/app/views/mon_compte.html
@@ -55,7 +55,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr ng-repeat="order in orders | orderBy: '-date':true | limitTo: 10">
+                              <tr ng-repeat="order in orders | date : format : 'medium' | orderBy: '-date':true | limitTo: 10">
                                 <td>{{order.id}}</td>
                                 <td>{{order.attributes.date}}</td>
                                 <td>12€</td>
