--- a/Angular5/src/app/pages/pages.component.html
+++ b/Angular5/src/app/pages/pages.component.html
@@ -1,33 +1,39 @@
-<nav class="navbar navbar-light bg-light">
-	<div class="container d-flex justify-content-between">
-		<!-- TODO responsive -->
-		<div class="d-flex justify-content-between">
-			<a class="navbar-brand" routerLink="/">Woolly</a>
-			<button class="navbar-toggler" type="button">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-		</div>
 
-		<div class="collapse navbar-collapse" id="navbar-collapse-2">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Accueil</a></li>
-				<li><a href="#!/billetterie">Liste des ventes</a></li>
-				<li><a href="#!/mon_compte">Mon compte</a></li>
-				<li><a href="#!/admin">Administrateur</a></li>
-				<li>
-					<a class="btn btn-default btn-outline btn-circle collapsed"  data-toggle="collapse" href="#menu" aria-expanded="false" aria-controls="nav-collapse2" >Se connecter</a>
-				</li>
-			</ul>
-			<div class="collapse nav navbar-nav nav-collapse slide-down" style="padding-top:8px;" id="menu">
-				<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="http://localhost:8000/login" >UTC / Escom</a>
-				<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="#!/login" >Extérieur</a>
-			</div>
+<mdb-navbar SideClass="navbar fixed-top navbar-expand-md navbar-dark bg-blue scrolling-navbar ie-nav" [containerInside]="true">
+	<logo>
+		<a class="logo navbar-brand" href="#"><strong>Woolly</strong></a>
+	</logo>
+	<links>
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item waves-light" mdbRippleRadius>
+				<a class="nav-link" routerLink="/">Accueil</a>
+			</li>
+			<li class="nav-item waves-light" mdbRippleRadius>
+				<a class="nav-link" routerLink="/billetterie">Liste des ventes</a>
+			</li>
+			<li class="nav-item waves-light" mdbRippleRadius>
+				<a class="nav-link" routerLink="/mon_compte">Mon compte</a>
+			</li>
+			<li class="nav-item waves-light" mdbRippleRadius>
+				<a class="nav-link" routerLink="/admin">Administration</a>
+			</li>
+			<li class="nav-item waves-light" mdbRippleRadius>
+				<a class="nav-link">Se connecter</a>
+			</li>
+		</ul>
+		<!-- 
+		<div class="collapse nav navbar-nav nav-collapse slide-down" style="padding-top:8px;" id="menu">
+			<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="http://localhost:8000/login" >UTC / Escom</a>
+			<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="#!/login" >Extérieur</a>
 		</div>
-	</div>
-</nav>
+		 -->
+	</links>
+</mdb-navbar>
 
 <router-outlet></router-outlet>
 
 <footer class="footer fixed-bottom">
-	<p class="container my-2 text-center">Made with <span class="glyphicon glyphicon-heart"></span> by SiMDE. <a href="#!/about">Contacter</a></p>
+	<p class="container my-2 text-center">
+		Made with <i class="fa fa-heart" aria-hidden="true"></i> by SiMDE. <a routerLink="/about">Contact</a>
+	</p>
 </footer>
