--- a/Angular5/src/app/pages/sales/sales.component.html
+++ b/Angular5/src/app/pages/sales/sales.component.html
@@ -1,3 +1,41 @@
-<p>
-  sales works!
-</p>
+<main class="p-5">
+	<div class="container">
+		<h1 class="mb-5">Liste des ventes</h1>
+	</div>
+
+	<div class="row mb-4">
+		<div *ngFor="let sale of sales.$toArray" class="py-3 col-md-4 col-sm-6 col-xl-3">
+			<div class="card card-image view hm-white-slight waves-light" mdbRippleRadius style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+				<div class="card-body text-white rgba-black-strong d-flex align-items-center py-5 px-4">
+					<div>
+						<h3 class="card-title"><strong>{{ sale.attributes.name }}</strong></h3>
+						<h5 class="font-italic">Organisé par {{ sale.attributes.association }}</h5>
+						<hr>
+						<p>{{ sale.attributes.description }}</p>
+						<a class="btn btn-blue waves-light" mdbRippleRadius>
+							<i class="fa fa-hand-o-right" aria-hidden=true></i> Accéder à la vente
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	
+	<div class="container">
+		<ul class="list-group list-group-flush">
+			<li *ngFor="let sale of sales.$toArray" class="list-group-item">
+				<div class="row">
+					<div class="col-md-9">
+						<h4>{{ sale.attributes.name }}</h4>
+						<p class="lead">{{ sale.attributes.description }}</p>
+					</div>
+					<div class="col-md-3">
+						<p class="my-1">Organisé par : <b>{{sale.attributes.association}}</b></p>
+						<p class="my-1">Début des ventes le : {{sale.attributes.begin_date | date: 'dd/MM/yyyy'}}</p>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+</main>
