--- a/Angular5/src/app/pages/login/login.component.html
+++ b/Angular5/src/app/pages/login/login.component.html
@@ -1,3 +1,9 @@
-<p>
-  login works!
-</p>
+<main class="p-5">
+	<div class="container">
+		<h1 class="mb-5 text-center">Espace de connexion</h1>
+	</div>
+	
+	<div class="d-flex align-items-center justify-content-center">
+		<a target="_blank" href="{{ loginUrl }}" class="btn btn-primary waves-light" mdbWavesEffect>Se connecter</a>
+	</div>
+</main>
