--- a/Angular5/src/app/pages/login/login.component.html
+++ b/Angular5/src/app/pages/login/login.component.html
@@ -4,10 +4,17 @@
 	</div>
 	
 	<div *ngIf="!loading; else loader" class="d-flex align-items-center justify-content-center">
-		<a href="{{ loginUrl }}" class="btn btn-primary waves-light" mdbWavesEffect>Se connecter</a>
+		<a href="{{ loginUrl }}" class="btn btn-primary waves-light" mdbWavesEffect (click)="loading = true">Se connecter</a>
 	</div>
 	
 	<ng-template #loader>
-		Connexion en cours
+		<div class="f-center flex-column">
+			<p class="mb-5 text-center lead">Connexion en cours...</p>
+			<div class="three-balls-loader">
+				<span class="ball ball-1"></span>
+				<span class="ball ball-2"></span>
+				<span class="ball ball-3"></span>
+			</div>
+		</div>
 	</ng-template>
 </main>
