--- a/Angular5/src/app/pages/account/account.component.html
+++ b/Angular5/src/app/pages/account/account.component.html
@@ -1,7 +1,32 @@
 <main class="container p-5">
 	<h1>Mon Compte</h1>
 
-	<div class="row">
+	<div class="row py-4">
+
+		<div class="col-md-5">
+			<h3>Mes informations</h3>
+			<table class="table">
+				<tbody>
+					<tr>
+						<th>Email</th>
+						<td>{{ me.attributes.email }}</td>
+					</tr>
+					<tr>
+						<th>Prénom</th>
+						<td>{{ me.attributes.first_name }}</td>
+					</tr>
+					<tr>
+						<th>Nom</th>
+						<td>{{ me.attributes.last_name }}</td>
+					</tr>
+					<tr>
+						<th>Type</th>
+						<!-- <td>{{ me.included.last_name }}</td> -->
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
 		<!-- 
 		<div class="panel-body">
 			<ul class="nav nav-pills">
