--- a/Angular5/src/app/pages/account/account.component.html
+++ b/Angular5/src/app/pages/account/account.component.html
@@ -2,38 +2,35 @@
 	<h1>Mon Compte</h1>
 
 	<div class="row py-4">
-<!-- 
 		<div class="col-md-5">
 			<h3>Mes informations</h3>
 			<table class="table">
 				<tbody>
 					<tr>
 						<th>Email</th>
-						<td>{{ me.attributes.email }}</td>
+						<td>{{ me?.email }}</td>
 					</tr>
 					<tr>
 						<th>Prénom</th>
-						<td>{{ me.attributes.first_name }}</td>
+						<td>{{ me?.first_name }}</td>
 					</tr>
 					<tr>
 						<th>Nom</th>
-						<td>{{ me.attributes.last_name }}</td>
+						<td>{{ me?.last_name }}</td>
 					</tr>
 					<tr>
 						<th>Type</th>
-						<td>
-							<pre>{{ me.attributes.type }}</pre>
-						</td>						
+						<td>{{ me?.type }}</td>						
 					</tr>
 				</tbody>
 			</table>
 		</div>
+
 		<div class="col-md-7">
 			<h3>Mes commandes</h3>
+			<pre class="pre-scrollable"></pre>
 		</div>
- -->
 	</div>
-
 </main>
 		<!-- 
 		<div class="panel-body">
