--- a/Angular5/src/app/pages/account/account.component.html
+++ b/Angular5/src/app/pages/account/account.component.html
@@ -20,22 +20,92 @@
 					</tr>
 					<tr>
 						<th>Type</th>
-						<td>{{ me?.usertype?.name }}</td>						
+						<td>{{ me?.usertype.name }}</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 		<div class="col-md-7">
 			<h3>Mes commandes</h3>
-			<div *ngIf="!me?.orders || me?.orders?.length==0">
+			<div *ngIf="me?.orders && me?.orders?.length>0; else noOrders">
+				<table class="table">
+					<tbody>
+					<tr>
+						<td>ID</td>
+						<td>Statut</td>
+						<td>Vente</td>
+						<td></td>
+					</tr>
+					<tr *ngFor="let order of me.orders">
+						<td>{{order.id}}</td>
+						<td [ngSwitch]="order.status">
+							<div *ngSwitchCase="0">Commande en cours</div>
+							<div *ngSwitchCase="1">En attente de validation</div>
+							<div *ngSwitchCase="2">Validée</div>
+							<div *ngSwitchCase="3">Pas payée</div>
+							<div *ngSwitchCase="4">Payée</div>
+							<div *ngSwitchCase="5">Expirée</div>
+							<div *ngSwitchCase="6">Annulée</div>
+						</td>
+						<td>
+							<table>
+								<tr>
+									<td>Identifiant</td>
+									<td>Article</td>
+									<td>Quantité</td>
+								</tr>
+								<tr *ngFor="let orderline of order.orderlines">
+									<td>{{orderline.id}}</td>
+									<td>{{orderline.item.name}}</td>
+									<td>{{orderline.quantity}}</td>
+								</tr>
+							</table>
+						</td>
+						<td [ngSwitch]="order.status">
+							<div>
+								<button type="button" *ngSwitchCase="0" class="btn btn-primary">
+									Terminer commande
+								</button>
+							</div>
+							<div>
+								<button type="button" *ngSwitchCase="1" class="btn btn-success">
+									Valider commande
+								</button>
+							</div>
+							<div>
+								<button *ngSwitchCase="3" class="btn btn-success">
+									Payer
+								</button>
+							</div>
+							<div>
+								<button type="button" *ngSwitchCase="4" class="btn btn-primary"> <!-- (click)="generatePDF(order)"> -->
+									Télécharger ma place
+								</button>
+							</div>
+							<div>
+								<button type="button" *ngSwitchCase="5" class="btn btn-danger" disabled> <!-- (click)="generatePDF(order)"> -->
+									Commande expirée
+								</button>
+							</div>
+							<div>
+								<button type="button" *ngSwitchCase="6" class="btn btn-danger" disabled> <!-- (click)="generatePDF(order)"> -->
+									Commande annulée
+								</button>
+							</div>
+						</td>
+					</tr>
+					</tbody>
+				</table>
+			</div>
+			<ng-template #noOrders>
 				<p>Vous n'avez encore fait aucune commande.</p>
 				<div class="text-center">
 					<a routerLink="/ventes" class="mx-auto my-4 btn btn-primary waves-light" mdbWavesEffect>Voir les ventes</a>
 				</div>
-			</div>
-			<pre>
-				{{ me?.orders | json }}
-			</pre>
+			</ng-template>
+			<!--<pre>-->
+				<!--{{ me?.orders | json }}-->
+			<!--</pre>-->
 		</div>
 
 	</div>
